# affinity

./: .gitignore  AGENTS.md  CHANGELOG.md  DECISIONS.md  LICENSE  LICENSE-content.md  README.md  ROADMAP.md  astro.config.mjs  package-lock.json  package.json
data/: acids-bases.toml  boiling-points.toml  bonding.toml  constants.toml  decomposition.toml  elements.toml  formation-enthalpies.toml  ionization-constants.toml  ions.toml  rate-constants.toml  reduction-potentials.toml  solubility-products.toml  solubility.toml  specific-heats.toml  vsepr.toml
docs/: SOURCES.md  architecture.md  authoring-gyms.md  authoring-problems.md  house-conventions.md  regime-map.md
producer/: pyproject.toml
producer/src/chemkernel/: __init__.py  balance.py  build.py  data.py  dimension.py  equilibrium.py  extent.py  formula.py  gym.py  interactive.py  kinetics.py  nomenclature.py  practice.py  reaction.py  reactivity.py  redox.py  reference.py  solubility.py  structure.py  units.py
producer/tests/: test_balance.py  test_build.py  test_data.py  test_dimension.py  test_equilibrium.py  test_extent.py  test_formula.py  test_gym.py  test_interactive.py  test_kinetics.py  test_nomenclature.py  test_oracle.py  test_practice.py  test_reaction.py  test_reactivity.py  test_redox.py  test_reference.py  test_solubility.py  test_structure.py  test_units.py
schemas/: comparison-lesson.schema.json  electrochemistry-lesson.schema.json  equilibrium-lesson.schema.json  formula.schema.json  gym.schema.json  kinetics-lesson.schema.json  molecule.schema.json  prediction-lesson.schema.json  (+6 more)
(+292 files in other folders)
