[project]
name = "chemkernel"
version = "0.1.0"
description = "Build-time chemistry producer: authored specs + curated data -> verified, schema-valid solution & reference JSON"
requires-python = ">=3.13"
dependencies = [
    "sympy==1.14.0",
]

# [project.scripts] build-problems / build-reference land with build.py (Phase 0), once there are specs
# and a schema to emit against. Until then the package ships library modules (data, formula, balance).

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chemkernel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
