[project]
name = "chemkernel"
version = "0.1.0"
description = "Build-time chemistry producer: authored specs + curated data -> verified, schema-valid solution & reference JSON"
requires-python = ">=3.13"
dependencies = [
    "sympy==1.14.0",
]

[project.scripts]
build-problems = "chemkernel.build:build_problems_main"
build-reference = "chemkernel.build:build_reference_main"
build-gyms = "chemkernel.build:build_gyms_main"

[dependency-groups]
dev = [
    "chempy>=0.10.1",
    "periodictable>=2.1.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chemkernel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
